Add more disclaimers

--- a/cooked-chart.html
+++ b/cooked-chart.html
@@ -14267,6 +14267,8 @@ a.anchor-link {
 <span class="c1"># WARNING: The time numbers are from https://twitchtracker.com/quin69/games and the game sizes are</span>
 <span class="c1"># a rough estimate based on the depot (all the files that are distributed via Steam&#39;s CDN for those games)</span>
 <span class="c1"># file size for the game&#39;s files from https://steamdb.info!</span>
+<span class="c1"># </span>
+<span class="c1"># Some game size data might be innacurately scraped, but the vast majority should be correct.</span>
 </pre></div>
 
      </div>
