--- a/cooked-chart.html
+++ b/cooked-chart.html
@@ -14259,7 +14259,7 @@ a.anchor-link {
 <div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[29]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># GRAPHS ARE AT THE BOTTOM!</span>
@@ -14279,7 +14279,7 @@ a.anchor-link {
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[20]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[30]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">requests</span>
@@ -14298,7 +14298,7 @@ a.anchor-link {
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[21]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[31]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">bs4</span>
@@ -14316,7 +14316,7 @@ a.anchor-link {
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[22]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[32]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">pprint</span>
@@ -14439,7 +14439,7 @@ a.anchor-link {
  &#39;Transference&#39;: 60,
  &#39;Unknown&#39;: 90,
  &#39;VRChat&#39;: 1045,
- &#39;Valheim&#39;: 1401,
+ &#39;Valheim&#39;: 1410,
  &#39;Warcraft III: Reforged&#39;: 115,
  &#39;Warhammer: Chaosbane&#39;: 295,
  &#39;Welcome to the Game II&#39;: 2460,
@@ -14459,7 +14459,7 @@ a.anchor-link {
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[23]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[33]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Have to use a webdriver because SteamDB isn&#39;t scraping friendly (CloudFlare checks)</span>
@@ -14734,7 +14734,7 @@ a.anchor-link {
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[24]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[34]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">pprint</span>
@@ -14771,10 +14771,10 @@ a.anchor-link {
 
 </div>
 
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[25]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[35]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">MEGABYTE_IN_BYTES</span> <span class="o">=</span> <span class="mi">1_000_000</span>
@@ -14793,7 +14793,9 @@ a.anchor-link {
 
 <span class="c1"># No depot info for Mortal Shell. Microsoft Flight Simulator&#39;s depot size is inaccurate, because it downloads the full game</span>
 <span class="c1"># using a special downloader, which is not distributed over Steam.</span>
-<span class="k">for</span> <span class="n">non_game</span> <span class="ow">in</span> <span class="s2">&quot;Special Events&quot;</span><span class="p">,</span> <span class="s2">&quot;IRL&quot;</span><span class="p">,</span> <span class="s2">&quot;Mortal Shell&quot;</span><span class="p">,</span> <span class="s2">&quot;Microsoft Flight Simulator&quot;</span><span class="p">:</span>
+<span class="n">GAMES_NOT_ON_STEAM</span> <span class="o">=</span> <span class="s2">&quot;Diablo&quot;</span><span class="p">,</span> <span class="s2">&quot;Diablo II&quot;</span><span class="p">,</span> <span class="s2">&quot;Diablo III&quot;</span><span class="p">,</span> <span class="s2">&quot;Diablo IV&quot;</span><span class="p">,</span> <span class="s2">&quot;Diablo Immortal&quot;</span><span class="p">,</span> <span class="s2">&quot;Lineage 2: Revolution&quot;</span><span class="p">,</span> <span class="s2">&quot;Demon&#39;s Souls&quot;</span>
+
+<span class="k">for</span> <span class="n">non_game</span> <span class="ow">in</span> <span class="p">[</span><span class="s2">&quot;Special Events&quot;</span><span class="p">,</span> <span class="s2">&quot;IRL&quot;</span><span class="p">,</span> <span class="s2">&quot;Mortal Shell&quot;</span><span class="p">,</span> <span class="s2">&quot;Microsoft Flight Simulator&quot;</span><span class="p">]</span> <span class="o">+</span> <span class="n">GAMES_NOT_ON_STEAM</span><span class="p">:</span>
     <span class="k">if</span> <span class="n">non_game</span> <span class="ow">in</span> <span class="n">game_to_airtime</span><span class="p">:</span>
         <span class="k">del</span> <span class="n">game_to_airtime</span><span class="p">[</span><span class="n">non_game</span><span class="p">]</span>
 
@@ -14804,6 +14806,36 @@ a.anchor-link {
      </div>
 </div>
 </div>
+</div>
+
+<div class="jp-Cell-outputWrapper">
+
+
+<div class="jp-OutputArea jp-Cell-outputArea">
+
+<div class="jp-OutputArea-child">
+
+    
+    <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
+
+
+<div class="jp-RenderedText jp-OutputArea-output" data-mime-type="application/vnd.jupyter.stderr">
+<pre>
+<span class="ansi-red-fg">---------------------------------------------------------------------------</span>
+<span class="ansi-red-fg">TypeError</span>                                 Traceback (most recent call last)
+<span class="ansi-green-fg">&lt;ipython-input-35-4492e7be4485&gt;</span> in <span class="ansi-cyan-fg">&lt;module&gt;</span>
+<span class="ansi-green-intense-fg ansi-bold">     17</span> GAMES_NOT_ON_STEAM <span class="ansi-blue-fg">=</span> <span class="ansi-blue-fg">&#34;Diablo&#34;</span><span class="ansi-blue-fg">,</span> <span class="ansi-blue-fg">&#34;Diablo II&#34;</span><span class="ansi-blue-fg">,</span> <span class="ansi-blue-fg">&#34;Diablo III&#34;</span><span class="ansi-blue-fg">,</span> <span class="ansi-blue-fg">&#34;Diablo IV&#34;</span><span class="ansi-blue-fg">,</span> <span class="ansi-blue-fg">&#34;Diablo Immortal&#34;</span><span class="ansi-blue-fg">,</span> <span class="ansi-blue-fg">&#34;Lineage 2: Revolution&#34;</span><span class="ansi-blue-fg">,</span> <span class="ansi-blue-fg">&#34;Demon&#39;s Souls&#34;</span>
+<span class="ansi-green-intense-fg ansi-bold">     18</span> 
+<span class="ansi-green-fg">---&gt; 19</span><span class="ansi-red-fg"> </span><span class="ansi-green-fg">for</span> non_game <span class="ansi-green-fg">in</span> <span class="ansi-blue-fg">&#34;Special Events&#34;</span><span class="ansi-blue-fg">,</span> <span class="ansi-blue-fg">&#34;IRL&#34;</span><span class="ansi-blue-fg">,</span> <span class="ansi-blue-fg">&#34;Mortal Shell&#34;</span><span class="ansi-blue-fg">,</span> <span class="ansi-blue-fg">&#34;Microsoft Flight Simulator&#34;</span> <span class="ansi-blue-fg">+</span> GAMES_NOT_ON_STEAM<span class="ansi-blue-fg">:</span>
+<span class="ansi-green-intense-fg ansi-bold">     20</span>     <span class="ansi-green-fg">if</span> non_game <span class="ansi-green-fg">in</span> game_to_airtime<span class="ansi-blue-fg">:</span>
+<span class="ansi-green-intense-fg ansi-bold">     21</span>         <span class="ansi-green-fg">del</span> game_to_airtime<span class="ansi-blue-fg">[</span>non_game<span class="ansi-blue-fg">]</span>
+
+<span class="ansi-red-fg">TypeError</span>: can only concatenate str (not &#34;tuple&#34;) to str</pre>
+</div>
+</div>
+
+</div>
+
 </div>
 
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
